MTM-44467 Random failures in unit test for java sdk
- Allowed selfAttach so that ByteBuddy works (used by Mockito)
- For detailed information look at developer notes in related MTM-44467